fix: Scroll-Y overflow fix

--- a/css/custom_style.scss
+++ b/css/custom_style.scss
@@ -103,6 +103,7 @@ p {
 .entire-window {
     height: 100vh;
     width: 100%;
+    overflow-y: auto;
 }
 
 .dynamic-bg {
